[package]
name = "tonic-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.6.16"
clap = { version = "4.2.3", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.25.0"
pin-project = "1"
prost = "0.11.9"
pki-types = { package = "rustls-pki-types", version = "1.1.0" }
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.9.2", features = ["tls"] }
tower = { version = "0.4", features = ["full"] }
rustls-pemfile = "2.0.0"

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }
